Update logos of some of programming languages.html

--- a/logos of some of programming languages.html
+++ b/logos of some of programming languages.html
@@ -20,13 +20,13 @@
 <li>Ruby</li>
 <img src="ruby.png" width="90">
 <li>C#</li>
-<img src="C2.png" width="90">
+<img src="c2.png" width="90">
 <li>PHP</li>
 <img src="php.png" width="90">
 <li>Objective-C</li>
 <img src="objc.jpg" width="90">
 <li>C++</li>
-<img src="C3.png" width="90">
+<img src="c3.png" width="90">
 <li>Go</li>
 <img src="go.png" width="90">
 <li>Swift</li>
